<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.virk.votingapp.VotingActivity">

    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtIntro_text"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />
    <com.virk.votingapp.views.AutoResizeTextView
        android:id="@+id/txtGroupName"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:textSize="70sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:layout_below="@+id/txtIntro" />

    <LinearLayout
        android:id="@+id/lytStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGroupName">
        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/star_normal"
            android:background="@null"
            android:contentDescription="@string/btn1_contentDescription"
            android:scaleType="fitCenter"
            android:layout_weight="0.333"/>
        <ImageButton
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/star_normal"
            android:background="@null"
            android:contentDescription="@string/btn2_contentDescription"
            android:scaleType="fitCenter"
            android:layout_weight="0.333"/>
        <ImageButton
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/star_normal"
            android:background="@null"
            android:contentDescription="@string/btn3_contentDescription"
            android:scaleType="fitCenter"
            android:layout_weight="0.333"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lytLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytStars"
        android:layout_marginTop="16dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:textAlignment="center"
            android:layout_weight="0.37"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Good"
            android:textAlignment="center"
            android:layout_weight="0.34"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Excellent"
            android:layout_weight="0.30"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lytLabels"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnVote_text"/>
</RelativeLayout>
