<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.virk.votingapp.MainActivity">

    <ImageView
        android:id="@+id/imgISTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/istdlogo"
        android:contentDescription="@string/imgISTD_contentDescription"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/spnEvent"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:backgroundTint="@android:color/holo_red_light"/>

        <Spinner
            android:id="@+id/spnGroup"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:clickable="false"
            android:backgroundTint="@android:color/holo_red_light"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txtPassword_hint"
            android:ems="15"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:id="@+id/btnLogin"
            android:text="@string/btnLogin_text"/>
    </LinearLayout>
</RelativeLayout>
